--- a/main.ipynb
+++ b/main.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -53,28 +53,27 @@
        "(GDL-009) Calz. Federalismo/ C. J. Angulo        69382\n",
        "(GDL-050) C. Pedro Moreno / Calz. Federalismo    69084\n",
        "(GDL-127) Av. Vallarta / Av. de Los Arcos        64354\n",
-       "                                                 ...  \n",
-       "(GDL-182) C. General Coronado / C. Manuel Acu    11323\n",
-       "(GDL-137) C. Ruíz de Alarcón/C. Efraín G Luna    11272\n",
-       "(GDL-141) C. Ruíz de Alarcón/C. Agustín Yáñez    11135\n",
-       "(GDL-123) C. Aurelio L. Gallardo / Av. México    11115\n",
-       "(GDL-114) C. Monte Cáucaso / C. Alameda          10977\n",
-       "Name: Nombre de la Estación, Length: 150, dtype: int64"
+       "(GDL-052) Av. Juárez / Av. 16 de Septiembre      58167\n",
+       "(GDL-073) Av. La Paz / Av. Federalismo           54729\n",
+       "(GDL-033) Av. Hidalgo / C. Pedro Loza            50313\n",
+       "(GDL-063) C. Colonias  / C. López Cotilla        50027\n",
+       "(GDL-054) Av. Juárez / Calz. Independencia       47386\n",
+       "Name: Nombre de la Estación, dtype: int64"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Count before the COVID Pandemic\n",
-    "pre_count.head(150)"
+    "pre_count.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -90,32 +89,22 @@
        "(GDL-198) Av. Alcalde / C. Hospital               66738\n",
        "(GDL-032) C. Degollado / Av. Hidalgo              60589\n",
        "(GDL-073) Av. La Paz / Av. Federalismo            58140\n",
-       "(GDL-063) C. Colonias  / C. López Cotilla         53266\n",
-       "(GDL-056) Av. 16 de Sept. / C. Miguel Blanco      52503\n",
-       "(GDL-106) C. Juan ¡lvarez / C. Belén              49841\n",
-       "(GDL-054) Av. Juárez / Calz. Independencia        49782\n",
-       "(GDL-064) C. Marsella / C. López Cotilla          49247\n",
-       "(GDL-036) C. Marcos Castellanos/ C. Morelos       48548\n",
-       "(GDL-019)  C. Juan Manuel / C. Andrés Terán       48137\n",
-       "(GDL-051) C. 8 de Julio / Av. Juárez              44181\n",
-       "(GDL-187) Av. 16 de Septiembre / C. Priscilia     42686\n",
-       "(GDL-025) C. Reforma / C. González Ortega         42170\n",
        "Name: Nombre de la Estación, dtype: int64"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Count during the COVID Pandemic\n",
-    "dur_count.head(20)"
+    "dur_count.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -131,20 +120,10 @@
        "Ex-GDL-182 Av. Plan de San Luis / Av. Enríque   -4824\n",
        "(GDL-084) C. Montenegro / Av. Chapultepec       -4712\n",
        "(GDL-030) C. Pedro Moreno/ C. Progreso          -4208\n",
-       "(GDL-012) C. Joaquín Angulo / C. Ghilardi       -3736\n",
-       "(GDL-096) C. Jesús García / C. González Orte    -3675\n",
-       "(GDL-023) C. Jesús / C. San Felipe              -3279\n",
-       "(GDL-095)  C. Mariano Bárcena / Maestros        -2922\n",
-       "(GDL-128) Av. Morelos / C. Emilio Castelar      -2909\n",
-       "(GDL-136) C. Lope de Vega/C. Efraín Glez Luna   -2553\n",
-       "(GDL-067) Calzada Federalismo / C. Vidrio       -2200\n",
-       "(GDL-061) C. Libertad /  C. Argentina           -2113\n",
-       "(GDL-129) C. Lope de Vega / Av. Vallarta        -2106\n",
-       "(GDL-053) C. Maestranza / Av. Juárez            -2082\n",
        "Name: Nombre de la Estación, dtype: int64"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +131,7 @@
    "source": [
     "#Difference \n",
     "difference = dur_count - pre_count\n",
-    "difference.sort_values(ascending=True).head(20)\n",
+    "difference.sort_values(ascending=True).head(10)\n",
     "#difference.head(50)"
    ]
   }
